# lvgl_sdl

./: CMakeLists.txt  README.md  lv_conf.h  lv_port_disp.c  lv_port_disp.h  main.c  shell_minimal.html
